--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </li>
             <li>N° de compte:
                 <ul class="nav">
-                    <li>000110 503992 00042516 (USD)</li>   +243 (0) 85 36 31 828
+                    <li>000110 503992 00042516 (USD)</li>  
                 </ul>
             </li>
             <li>Libellé:
@@ -94,11 +94,6 @@
             <ul class="nav">
              <li>+243/976 374 522</li>
              <li>+243/828 879 813</li>
-            </ul>
-            </li>
-            <li>Email: 
-            <ul class="nav">
-             <li>boitestluc@email.amettre</li>
             </ul>
             </li>
         </ul>
